# dicord-chat

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_ja.md  bot.py  i18n.py  pyproject.toml  pytest.ini  requirements.txt
.github/: renovate.json
agents/: base.py  log.py  main_agent.py  prompts.py  ratelimit.py  registry.py
agents/execution/: automod.py  category.py  channel.py  emoji.py  event.py  forum.py  invite.py  member.py  message.py  permission.py  poll.py  role.py  server.py  soundboard.py  stage.py  sticker.py  thread.py  vc.py  webhook.py
agents/investigation/: audit_log.py  automod.py  category.py  channel.py  emoji.py  event.py  forum.py  invite.py  member.py  message.py  permission.py  poll.py  role.py  search.py  server.py  soundboard.py  stage.py  sticker.py  thread.py  url_scraper.py  vc.py  webhook.py
cogs/: agent_cog.py  general.py
database/: __init__.py  conversation.py  schema.sql
formatters/: __init__.py  response.py
graph/: llm.py  state.py  workflow.py
locales/: en.json  ja.json
services/: __init__.py  attachment.py  scraper.py  search.py
tests/: __init__.py  conftest.py  test_attachment.py  test_formatters.py  test_planner.py  test_ratelimit.py  test_registry.py  test_search.py  test_workflow.py
tests/execution/: __init__.py  test_automod.py  test_category.py  test_channel.py  test_emoji.py  test_event.py  test_forum.py  test_invite.py  test_member.py  test_message.py  test_permission.py  test_poll.py  test_role.py  test_server.py  test_soundboard.py  test_stage.py  test_sticker.py  test_thread.py  (+2 more)
(+22 files in other folders)
